--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,20 @@
         </plugins>
     </build>
     <dependencies>
+
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.7</version>
+        </dependency>
         <dependency>
             <groupId>de.uka.ilkd</groupId>
             <artifactId>key</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>de.uka.ilkd</groupId>
+            <artifactId>recoderKey</artifactId>
             <version>2.0</version>
         </dependency>
         <dependency>
