--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,14 @@
     <dependencies>
 
         <dependency>
-            <groupId>antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>2.7.7</version>
+            <groupId>antlr_custom</groupId>
+            <artifactId>antlr_custom</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javacc</groupId>
+            <artifactId>javacc</artifactId>
+            <version>1.6</version>
         </dependency>
         <dependency>
             <groupId>de.uka.ilkd</groupId>
